# torrent-rs

./: .gitignore  Cargo.toml  bencoded_info  godel.torrent
src/: fileio.rs  lib.rs  main.rs  net.rs  peer.rs  tracker.rs  util.rs
src/data/: metainfo.rs  mod.rs  peer_message.rs  tracker.rs  tracker_udp.rs  udp_protocol.rs
src/peer/: message_handle.rs  mod.rs  peer_net.rs  per_torrent.rs  server.rs  tracker.rs  unchoke.rs
src/piece/: mod.rs
src/tracker/: client.rs
